[package]
name = "ruranges-py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruranges_py"
crate-type = ["cdylib", "rlib"]

[features]
# Keep default empty so `cargo test` does not use `pyo3/extension-module`.
# The extension-module linker mode is correct for Python extension builds
# (maturin/pip), but it can cause unresolved Python symbols for Rust test
# executables on some platforms/toolchains.
default = []
# Enable this feature for Python extension builds.
python-module = ["pyo3/extension-module"]

[dependencies]
# Core interval algorithms now live in the separate Rust crate/repo.
ruranges-core = { version = "0.1.1" }

# Python bindings.
rustc-hash = "2.1.0"
pyo3 = { version = "0.26.0", optional = false }
numpy = { version = "0.26.0", optional = false }

# polars = { version = "0.46.0", features = ["csv", "lazy", "dtype-categorical"], optional = false}
# rust-htslib = { version = "0.49.0", optional = false}
